# otus-cpp-homework-02

./: .travis.yml  CMakeLists.txt  bintray-descriptor.sh  descriptor.json
.github/workflows/: ci.yml
ip-filter/: CMakeLists.txt
ip-filter/src/: main.cpp
src/: custom_tie.hpp  custom_tuple.hpp  main.cpp
